<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_refresh">Refresh</string>
    <string name="XP_default">Experience</string>
    <string name="HP_default">Health</string>
    <string name="MP_default">Mana</string>
    <string name="ERR_pb_barcode">Prefs couldn\'t be loaded from the barcode</string>
    <string name="PS_settings_title">Settings</string>
    <string name="SP_address_hint">Your custom server</string>
    <string name="SP_userID_title">User ID</string>
    <string name="SP_userID_summary">Your User ID</string>
    <string name="SP_APIToken_title">API Token</string>
    <string name="SP_APIToken_summary">Your API Token</string>
    <string name="Language_title">Language</string>
    <string name="Language_summary">Change Habitica\'s language</string>
    <string name="SP_user_qr_code">Your QR Code</string>
    <string name="PS_contact_title">Contact me</string>
    <string name="unknown_error">An error occurred…</string>
    <string name="pref_account_header">Account</string>
    <string name="pref_first_day_of_the_week_title">First Day of the Week</string>
    <string name="pref_first_day_of_the_week_summary">First day of the week in all calendars</string>
    <string name="pref_first_day_of_the_week_default_value" translatable="false">1</string>
    <string name="pref_first_day_of_the_week_key" translatable="false">FirstDayOfTheWeek</string>
    <string name="pref_reminder_header">Daily Reminder</string>
    <string name="pref_reminder_checkbox">Activate Reminder</string>
    <string name="pref_reminder_picker">Set Reminder Time</string>
    <string name="pref_cds_header">Custom Day Start</string>
    <string name="pref_cds_picker">Set Custom Day Start Time</string>
    <string name="pref_push_notifications_checkbox">User Push Notifications</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="push_notifications_sum">Set your push notifications settings</string>
    <string name="preference_push_you_won_challenge">You won a Challenge!</string>
    <string name="preference_push_received_a_private_message">Received a Private Message</string>
    <string name="preference_push_gifted_gems">Gifted Gems</string>
    <string name="preference_push_gifted_subscription">Gifted Subscription</string>
    <string name="preference_push_invited_to_party">Invited to Party</string>
    <string name="preference_push_invited_to_guild">Invited to Guild</string>
    <string name="preference_push_your_quest_has_begun">Your Quest has Begun</string>
    <string name="preference_push_invited_to_quest">Invited to Quest</string>
    <string name="task_value">Value</string>
    <string name="new_todo">New To-Do</string>
    <string name="new_reward">New Reward</string>
    <string name="new_daily">New Daily</string>
    <string name="new_habit">New Habit</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="username">Username</string>
    <string name="email_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="emailAddress">Email address</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Log out of your account</string>
    <string name="account_details_sum">Check your account details</string>
    <string name="account_details">Account Details</string>
    <string name="LoginActivityName">Welcome</string>
    <string name="string_revive">Revive</string>
    <string name="please_connect">Please connect through the application before using a widget</string>
    <string name="about.title">About</string>
    <string name="about.libraries">Libraries</string>
    <string name="about.versionhistory">Version history</string>
    <string name="about.habitica_open_source">Habitica is available as open source software on Github</string>
    <string name="about.rate_our_app">Rate our App</string>
    <string name="about.give_us_feedback">Send us Feedback!</string>
    <string name="about.bugreport">Report a Bug</string>
    <string name="about.source_code">Source Code</string>
    <string name="repeatEvery">Repeat Every</string>
    <string name="network_error_title">Connection Error</string>
    <string name="network_error_no_network_body">You are not connected to the internet.</string>
    <string name="internal_error_api">There seems to be a problem with the server. Try again later.</string>
    <string name="authentication_error_title">Authentication Error</string>
    <string name="authentication_error_body">Your Username and/or Password was incorrect.</string>
    <string name="login_validation_error_title">Validation Error</string>
    <string name="login_validation_error_fieldsmissing">You have to fill out all fields.</string>
    <string name="save_changes">Save</string>
    <string name="copy">Copy</string>
    <string name="notes">Notes</string>
    <string name="text">Text</string>
    <string name="difficulty">Difficulty</string>
    <string name="tags">Tags</string>
    <string name="trivial">Trivial</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_date">Start Date</string>
    <string name="positive_habit_form">Positive ( + )</string>
    <string name="negative_habit_form">Negative ( - )</string>
    <string name="checklist">Checklist</string>
    <string name="reminders">Reminders</string>
    <string name="actions">Actions</string>
    <string name="attributes">Attributes</string>
    <string name="physical">Physical</string>
    <string name="mental">Mental</string>
    <string name="social">Social</string>
    <string name="other">Other</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_weekly">On Certain Days of the Week</string>
    <string name="frequency_daily">Every X Days</string>
    <string name="repeatables_summary_title">Summary</string>
    <string name="repeatables_title">Repeats</string>
    <string name="repeatables_on_title">Repeats On</string>
    <string name="repeatables_frequency_daily">Daily</string>
    <string name="repeatables_frequency_weekly">Weekly</string>
    <string name="repeatables_frequency_monthly">Monthly</string>
    <string name="repeatables_frequency_yearly">Yearly</string>
    <string name="repeatables_frequency_day_of_month">Day of Month</string>
    <string name="repeatables_frequency_day_of_week">Day of Week</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="levelup_header">You gained a level!</string>
    <string name="levelup_detail">By accomplishing your real-life goals, you\'ve grown to Level %1$d!</string>
    <string name="levelup_health">You have been fully healed!</string>
    <string name="levelup_button">Huzzah!</string>
    <string name="faint_subtitle">Don\'t despair!</string>
    <string name="faint_penalty_body">You lost a Level, your Gold, and a piece of Equipment, but you can get them all back with hard work! Good luck--you\'ll do great.</string>
    <string name="faint_header">You ran out of Health!</string>
    <string name="faint_button">Refill Health &amp; Try Again</string>
    <string name="filter">Filter</string>
    <string name="profile_image">Profile Image</string>
    <string name="mana_price_button">%d MP</string>
    <string name="used_skill">You used %1$s for %2$d mana.</string>
    <string name="used_skill_without_mana">You used %1$s.</string>
    <string name="new_checklist_item">new checklist item</string>
    <string name="add_checklist_item">Add</string>
    <string name="reminder_title">Remember to check off your Dailies!</string>
    <string name="skill_progress_title">Using Skill</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="chat_flag_confirmation">Are you sure you want to report this message for violation?</string>
    <string name="flag_confirm">Flag Message</string>
    <string name="unlock_lvl_11">Unlock at lvl 11</string>
    <string name="no_party_message">You are not in a party. To join a party, please visit the website.</string>
    <string name="forgot_pw_btn">Forgot Password</string>
    <string name="forgot_pw_tv">Forgot Password? Please use the mobile Website.</string>
    <string name="tavern.inn.checkOut">Reactivate your Dailies</string>
    <string name="tavern.inn.rest">Pause your Dailies</string>
    <string name="reward.dialog.buy">Buy</string>
    <string name="warrior">Warrior</string>
    <string name="rogue">Rogue</string>
    <string name="mage">Mage</string>
    <string name="healer">Healer</string>
    <string name="warrior_description">Warriors score more and better \"critical hits\", which randomly give bonus Gold, Experience, and drop chance for scoring a task. They also deal heavy damage to boss monsters. Play a Warrior if you find motivation from unpredictable jackpot-style rewards, or want to dish out the hurt in boss Quests!</string>
    <string name="mage_description">Mages learn swiftly, gaining Experience and Levels faster than other classes. They also get a great deal of Mana for using special abilities. Play a Mage if you enjoy the tactical game aspects of Habit, or if you are strongly motivated by leveling up and unlocking advanced features!</string>
    <string name="rogue_description">Rogues love to accumulate wealth, gaining more Gold than anyone else, and are adept at finding random items. Their iconic Stealth ability lets them duck the consequences of missed Dailies. Play a Rogue if you find strong motivation from Rewards and Achievements, striving for loot and badges!</string>
    <string name="healer_description">Healers stand impervious against harm, and extend that protection to others. Missed Dailies and bad Habits don\'t faze them much, and they have ways to recover Health from failure. Play a Healer if you enjoy assisting others in your Party, or if the idea of cheating Death through hard work inspires you!</string>
    <string name="opt_out_class">Opt Out</string>
    <string name="opt_out_description">Can\'t be bothered with classes? Want to choose later? Opt out - you\'ll be a warrior with no special abilities. You can read about the class system later on the wiki and enable classes at any time.</string>
    <string name="AudioTheme_title">Audio Theme</string>
    <string name="AudioTheme_summary">Change Habitica\'s Audio Theme</string>
    <string name="payment_method">Payment method</string>
    <string name="subscription">Subscription</string>
    <string name="active">Active</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="visit_habitica_website">Visit Habitica Website</string>
    <string name="current_bonuses">Current Bonuses</string>
    <string name="months_subscribed">Months subscribed</string>
    <string name="current_hourclasses">Current Mystic Hourglasses</string>
    <string name="monthly_gem_cap">Monthly gem cap</string>
    <string name="inactive">Inactive</string>
    <string name="subscription_status">Subscription Status</string>
    <string name="maintenance">Maintenance</string>
    <string name="reload_content">Reload Content</string>
    <string name="dailyDueDefaultView">Set Dailies default to ‘due’ tab</string>
    <string name="dailyDueDefaultViewDescription">With this option set, the Dailies tasks will default to ‘due’ instead of ‘all’</string>
</resources>