<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subscriptionDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/subscriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/subscriptionBoxText.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription" />

            <TextView
                android:id="@+id/subscriptionDurationTextView"
                style="@style/subscriptionBoxText.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Recurring every 3 months" />
        </LinearLayout>

        <TextView
            android:id="@+id/subscriptionStatusActive"
            style="@style/Pill.Selected.Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active" />

        <TextView
            android:id="@+id/subscriptionStatusInactive"
            style="@style/Pill.Selected.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inactive"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        style="@style/subscriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/subscriptionBoxText.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method" />

        <TextView
            android:id="@+id/paymentProcessorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Google" />
    </LinearLayout>

    <LinearLayout
        style="@style/subscriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/subscriptionBoxText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/current_bonuses" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                style="@style/subscriptionBoxText.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/months_subscribed" />

            <TextView
                android:id="@+id/monthsSubscribedTextView"
                style="@style/Pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="32 Months" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <TextView
                style="@style/subscriptionBoxText.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monthly_gem_cap" />

            <TextView
                android:id="@+id/gemCapTextView"
                style="@style/Pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="50 Gems" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/subscriptionBoxText.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_hourclasses" />

            <TextView
                android:id="@+id/currentHourglassesTextView"
                style="@style/Pill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/subscriptionBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/subscriptionBoxText.Title.Red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_subscription" />

        <TextView
            android:id="@+id/cancelSubscriptionDescription"
            style="@style/subscriptionBoxText.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/cancel_subscription_notgoogle.description" />

        <Button
            android:id="@+id/visitWebsiteButton"
            style="@style/Button.Purple.Small"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:text="@string/visit_habitica_website" />
    </LinearLayout>

</LinearLayout>