<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/healerWrapper"
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection_highlight">

                <com.habitrpg.android.habitica.ui.AvatarView
                    android:id="@+id/healerAvatarView"
                    android:layout_width="@dimen/avatar_header_width"
                    android:layout_height="@dimen/avatar_header_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/healer" />

                    <TextView
                        style="@style/CardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/healer_description" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/mageWrapper"
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection_highlight">

                <com.habitrpg.android.habitica.ui.AvatarView
                    android:id="@+id/mageAvatarView"
                    android:layout_width="@dimen/avatar_header_width"
                    android:layout_height="@dimen/avatar_header_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mage" />

                    <TextView
                        style="@style/CardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mage_description" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/rogueWrapper"
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection_highlight">

                <com.habitrpg.android.habitica.ui.AvatarView
                    android:id="@+id/rogueAvatarView"
                    android:layout_width="@dimen/avatar_header_width"
                    android:layout_height="@dimen/avatar_header_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rogue" />

                    <TextView
                        style="@style/CardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rogue_description" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/warriorWrapper"
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection_highlight">

                <com.habitrpg.android.habitica.ui.AvatarView
                    android:id="@+id/warriorAvatarView"
                    android:layout_width="@dimen/avatar_header_width"
                    android:layout_height="@dimen/avatar_header_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CardTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/warrior" />

                    <TextView
                        style="@style/CardText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/warrior_description" />
                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/optOutWrapper"
            style="@style/CardView.Default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selection_highlight"
                android:orientation="vertical">

                <TextView
                    style="@style/CardTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_out_class" />

                <TextView
                    style="@style/CardText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opt_out_description" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>